Fix mail word wrap

--- a/css/main.css
+++ b/css/main.css
@@ -1115,6 +1115,10 @@ section h2 {
     overflow-wrap: break-word;
 }
 
+#mail h2 span {
+    white-space: nowrap;
+}
+
 #mail a {
     color: var(--theme-color-4);
 }
