--- a/css/mobile.css
+++ b/css/mobile.css
@@ -500,6 +500,12 @@
 /* MAIL */
 /*************************************************************************************************/
 
+/* <350 */
+@media screen and (max-width: 350px) {
+    #mail h2 {
+        font-size: 24pt;
+    }
+}
 
 
 
